Correction des contrastes Last update

--- a/sass/index.css
+++ b/sass/index.css
@@ -61,7 +61,7 @@ Classes d'origines et classes spécifiques utilisées sur les 2 pages
 }
 
 .white--big {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 /*-----------------------------------------------
